Add basic CSS structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
+    <link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <div id="main">
@@ -19,20 +20,32 @@
                 <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p>You <em>know</em> you want to.</p>
             </div>
-            <div>
-                <form>
-                    <label for="firstName">First Name</label>
-                    <input type="text" id="firstName">
-                    <label for="lastName">Last Name</label>
-                    <input type="text" id="lastName">
-                    <label for="email">E-Mail</label>
-                    <input type="email" id="email">
-                    <label for="phoneNumber">Phone Number</label>
-                    <input type="tel" id="phoneNumber">
-                    <label for="password">Password</label>
-                    <input type="password" id="password">
-                    <label for="passwordConfirm">Confirm Password</label>
-                    <input type="password" id="passwordConfirm">
+            <div id="form-container">
+                <form id="form">
+                    <div class="input">
+                        <label for="firstName">First Name</label>
+                        <input type="text" id="firstName">
+                    </div>
+                    <div class="input">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" id="lastName">
+                    </div>
+                    <div class="input">
+                        <label for="email">E-Mail</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="input">
+                        <label for="phoneNumber">Phone Number</label>
+                        <input type="tel" id="phoneNumber">
+                    </div>
+                    <div class="input">
+                        <label for="password">Password</label>
+                        <input type="password" id="password">
+                    </div>
+                    <div class="input">
+                        <label for="passwordConfirm">Confirm Password</label>
+                        <input type="password" id="passwordConfirm">
+                    </div>
                 </form>
             </div>
             <div>
