Add background image & more CSS styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <img>
                 <span>Hug in a Box</span>
             </div>
+            <span>Photo by <a href="https://unsplash.com/@curology?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Curology</a> on <a href="https://unsplash.com/s/photos/box?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </span>
         </div>
         <div id="sign-up-container">
             <div>
