Add more CSS to to logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="main">
         <div id="image-container">
             <div id="company-container">
-                <img>
+                <img src="box-svgrepo-com.svg">
                 <span>Hug in a Box</span>
             </div>
             <span>Photo by <a href="https://unsplash.com/@curology?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Curology</a> on <a href="https://unsplash.com/s/photos/box?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
