Remove unecessary form-container div

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p>You <em>know</em> you want to.</p>
             </div>
-            <div id="form-container">
-                <form id="form">
+            <form id="form">
                     <div class="input">
                         <label for="firstName">First Name</label>
                         <input type="text" id="firstName">
@@ -48,9 +47,8 @@
                         <label for="passwordConfirm">Confirm Password</label>
                         <input type="password" id="passwordConfirm">
                     </div>
-                </form>
-            </div>
-            <div>
+            </form>
+            <div id="account-container">
                 <button id="create-account">Create Account</button>
                 <p>Already have an account? <a href="">Log in</a></p>
             </div>
